# rs-arto

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  flake.nix  justfile
.claude/: CLAUDE.md  TIPS.md
.claude/rules/: architecture-overview.md  config-module.md  serde-patterns.md  ui-design.md
.claude/skills/add-icon/: SKILL.md
.github/workflows/: build.yml
assets/: welcome.md
assets/mac/: Info.plist
desktop/: Dioxus.toml  build.rs
desktop/src/: assets.rs
example/: sample1.md  sample2.md
examples/: screen_info.rs
extras/mac/: Info.plist  arto-app.icns  octoscope-app.icns
renderer/: package.json  pnpm-lock.yaml  vite.config.ts
src/: assets.rs  components.rs  events.rs  history.rs  main.rs  markdown.rs  menu.rs  state.rs  theme.rs  utils.rs  watcher.rs  window.rs
src/components/: app.rs  content.rs  entrypoint.rs  header.rs  icon.rs  main_app.rs  mermaid_window.rs  sidebar.rs  tab_bar.rs  theme_selector.rs
src/components/content/: file_viewer.rs  inline_viewer.rs  markdown_viewer.rs  no_file_view.rs
src/components/header/: theme_selector.rs
src/config/: app_config.rs
src/state/: app_state.rs  persistence.rs
src/utils/: file.rs  screen.rs  window_title.rs
src/window/: child.rs  helpers.rs  index.rs  main.rs  settings.rs  types.rs
web/: justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/scripts/: build-icon-sprite.ts
web/src/: code-copy.ts  main.css  main.ts  math-renderer.ts  mermaid-renderer.ts  render-coordinator.ts  syntax-highlighter.ts  theme.ts
web/style/: main.css  variables.css
(+33 files in other folders)
