[package]
name = "octoscope"
version = "0.1.0"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dioxus = { version = "0.6.0", features = [] }
dioxus-desktop = "0.6.3"
dotenvy = "0.15.7"
html-escape = "0.2.13"
pulldown-cmark = "0.13.0"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
